[package]
name = "graphembed"
version = "0.0.8"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/graphembed"
keywords = ["graph", "embedding", "hash"]
license = "MIT OR Apache-2.0"
description = "graph embedding"
documentation = "https://docs.rs/graphembed"
edition = "2021"


[lib]
name="graphembed"
path="src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "graphembed"
path = "src/bin/embed.rs"


[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#
petgraph = { version = "0.7.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

num = { version = "0.4" }
num-traits = { version = "0.2" }

# linear algebra stuff
ndarray = { version = "0.16", features = ["rayon", "serde"] }
# ndarray-linalg = { version = "0.17", default-features = false }
lax = { version = "0.17" }
lapacke = { version = "0.5" }
sprs = { version = "0.11" }

# io

csv = { version = "1.3" }
bson = { version = "2.13" }


# for //
atomic = { version = "0.6" }
parking_lot = { version = "0.12" }
rayon = { version = "1.10" }
num_cpus = { version = "1.16" }

cpu-time = { version = "1.0" }
clap = { version = "4.5" }

##
indexmap = { version = "2.2" }
ahash = { version = "0.8" }
probminhash = { version = "0.1" }
#probminhash = {path = "../probminhash"}

## rand utils
rand = { version = "0.9" }
rand_xoshiro = { version = "0.7" }
rand_distr = { version = "0.5" }

## sorting, indexing
ordered-float = { version = "5.0" }
indxvec = { version = "1.9" }
hdrhistogram = { version = "7.5" }
quantiles = { version = "0.7" }

# hnsw_rs = { path = "../hnswlib-rs", features = ["simdeez_f"] }
hnsw_rs = { version = "0.3" }

# annembed = { git = "https://gitlab.com/jpboth/annembed" }
# annembed = { version = "0.1.4" }
annembed = { git = "https://github.com/jean-pierreBoth/annembed" }
# annembed = { path = "../annembed" }

#  
lazy_static = { version = "1.5" }

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }

# hack to avoid interaction bug with intel-mkl
anyhow = { version = "1.0.58" }
# for documentation
katexit = { version = "0.1" }

pyo3 = { version = "0.24.1", optional = true }
[features]

# can be change to 
#
#default = ["annembed/intel-mkl-static", "lax/intel-mkl-static"]


#default = ["openblas-system", "simdeez_f"]


##default = ["openblas-system", "simdeez_f"]
python = ["pyo3/extension-module"]
# simd choice. stdsimd requires nightly compiler
stdsimd = ["hnsw_rs/stdsimd"]
simdeez_f = ["hnsw_rs/simdeez_f"]

intel-mkl-static = [
    "ndarray/blas",
    "lax/intel-mkl-static",
    "annembed/intel-mkl-static",
]

openblas-static = [
    "ndarray/blas",
    "lax/openblas-static",
    "annembed/openblas-static",
]

openblas-system = [
    "ndarray/blas",
    "lax/openblas-system",
    "annembed/openblas-system",
]
