[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "graphembed_rs"
version = "0.1.1"
description = "Python bindings for the high‑performance Rust graph/network embedding library graphembed"
authors = [{ name = "Jianshu Zhao" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"

[tool.maturin]
module-name = "graphembed_rs"
features = ["python", "intel-mkl-static", "simdeez_f"]

